# vita

./: .gitignore  Dockerfile.build  LICENSE  README.md  build.gradle.kts  build.sh  gradle.properties  settings.gradle.kts
examples/mock-server/: build.gradle.kts
examples/mock-server/src/main/java/zone/hwj/vita/mock/: MockRunner.java
gradle/wrapper/: gradle-wrapper.properties
libs/vita-lib-native/: build.gradle.kts
libs/vita-lib-native/src/main/java/zone/hwj/vita/: NativeCommon.java  NativeManager.java  NativeTools.java
libs/vita-lib-native/src/main/java/zone/hwj/vita/api/: RequestBodyHandler.java  RequestHandler.java  Routes.java
libs/vita-lib-native/src/main/java/zone/hwj/vita/def/: NativeBuffer.java  NativeBufferGroup.java  NativeString.java  NativeTest.java  PathHolder.java  RequestHandleEntry.java
libs/vita-lib-native/src/main/java/zone/hwj/vita/mock/: MockRunner.java  NativeMockInvoker.java  NativeTest.java  NativeTestString.java
libs/vita-lib-native/src/test/java/zone/hwj/vita/: NativeManagerTest.java
native/: Cargo.toml
native/libvita-sys/: Cargo.toml  build.gradle.kts
native/libvita-sys/src/: common.rs  lib.rs  mock_invoke.rs  test_invoke.rs
native/libvita-sys/src/server/: callback.rs  mod.rs  request_handler.rs
server/: build.gradle.kts
server/src/main/java/zone/hwj/vita/: Vita.java
server/src/main/java/zone/hwj/vita/api/: Routes.java
server/src/main/java/zone/hwj/vita/codec/: BufferDecoder.java  BufferEncoder.java  BufferTranslator.java
src/main/java/zone/hwj/: Main.java
(+16 files in other folders)
