[package]
name = "vita"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix = "0.13"
bytes = "1"
futures = "0.3.31"
tokio-stream = "0.1.17"
uuid = {version = "1", features = ["v4"]}
dashmap = "6"